# File_Encryptor_Decryptor

./: CMakeLists.txt  README.md
src/app/EncrpytDecrypt/: Cryption.cpp  Cryption.hpp  CryptionMain.cpp
src/app/Processes/: ProcessManagement.cpp  ProcessManagement.hpp  Task.hpp
src/app/fileHandling/: IO.cpp  IO.hpp  ReadEnv.cpp
test/: test1.txt
